<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_voice_memo"
        android:onClick="goToMemo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_natural"
        android:onClick="sendNatural"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Record a memo"
        android:onClick="goToRecordMemo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_to_player"
        android:onClick="goToPlayer"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_chat"
        android:onClick="startChatActivity"
        />

    <!--   <Button-->
    <!--       android:layout_width="wrap_content"-->
    <!--       android:layout_height="wrap_content"-->
    <!--       android:text="@string/call_someone"-->
    <!--       android:onClick="call" />-->

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/await_call"-->
    <!--        android:onClick="waitForCall" />-->

</LinearLayout>